# rust-to-do-list

./: Cargo.toml  README.md  test-journal.json
src/: cli.rs  main.rs  tasks.rs
