[package]
name = "rust-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80" 
home = "0.5.9" 
structopt = "0.3.26" # Parse command line argument by defining a struct.
serde_json = "1.0.114"

[dependencies.chrono]
features=["serde"] # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4.34"

[dependencies.serde] #add serde
features=["derive"] #derive feature
version ="1.0.197"
